// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional_property test_optional_property_not_templated 1`] = `
{
  "json": {
    "property": "Some text",
    "type": "entity_with_optional_property",
  },
  "templateContext": {},
}
`;

exports[`optional_property test_optional_property_not_templated 2`] = `
[
  [
    [Error: No such template],
  ],
]
`;

exports[`optional_property test_optional_property_with_link 1`] = `
{
  "json": {
    "link": "Some text",
    "property": "Some text",
    "type": "entity_with_optional_property",
  },
  "templateContext": {
    "link": "Some text",
  },
}
`;

exports[`optional_property test_optional_property_with_link_missing_data 1`] = `
{
  "json": {
    "type": "entity_with_optional_property",
  },
  "templateContext": {},
}
`;

exports[`optional_property test_optional_property_with_link_missing_data 2`] = `[]`;

exports[`optional_property test_optional_property_with_override 1`] = `
{
  "json": {
    "property": "Some text",
    "type": "entity_with_optional_property",
  },
  "templateContext": {
    "property": "Some text",
  },
}
`;

exports[`optional_property test_optional_property_with_override 2`] = `[]`;

exports[`optional_property test_optional_property_with_override_in_template 1`] = `
{
  "json": {
    "link_override": "Some text",
    "property": "Some text",
    "type": "t_0",
  },
  "templateContext": {
    "link_override": "Some text",
  },
}
`;

exports[`optional_property test_optional_property_without_link 1`] = `
{
  "json": {
    "property": "Some text",
    "type": "entity_with_optional_property",
  },
  "templateContext": {},
}
`;

exports[`optional_property test_optional_property_without_link_missing_data 1`] = `
{
  "json": {
    "type": "entity_with_optional_property",
  },
  "templateContext": {},
}
`;
